Titulo da pagina

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Gerador de Números Aleatórios</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Gerador de Números</h2>
+        
+    </div>
 </body>
 </html>
