Troca do titulo e criação das divs dos inputs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 </head>
 <body>
     <div class="container">
-        <h2>Gerador de Números</h2>        
+        <h2>Gerador de Número Aleatório</h2>
+        
+        <div class="group">
+            <div class="input">
+
+            </div>
+            <div class="input">
+                
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
