Criando os Inputs e seus labels

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
         
         <div class="group">
             <div class="input">
-
+                <label for="min">Mín:</label>
+                <input id="min" type="number" name="min">
             </div>
+
             <div class="input">
-                
+                <label for="max">Máx:</label>
+                <input id="max" type="number" name="max">                
             </div>
 
         </div>
