Informações adicionadas ao HTML

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             </div>
 
         </div>
+        <button id="generate">Gerar</button>
+        <div id="result">
+            <span>00</span>
+        </div>
     </div>
 </body>
 </html>
